# real_estate_analysis

./: .gitignore  CNAME  custom.css  index.html  pyproject.toml  todo.org
analysis/jl/: Project.toml  eda.jl
analysis/notebook/: yuu_re_analysis.ipynb
analysis/python/: eda.ipynb  eda.py  linreg.py  prep.py  qualitative_analysis.ipynb
analysis/r/: descriptive_stats.Rmd  eda.Rmd  linear_regression.R  linear_regression.Rmd  regressions.R
assets/: table2.tex
assets/.auctex-auto/: table2.el
assets/old_assets/: t2.tex
paper/: architecture.org  custom.css  jsai_presentation.org  jsai_submission.org  jsaiac.sty  local-bib.bib  rea.org  rea_application.org  rea_jsai_submission.org  references.bib  summary.org  toc.org
paper/assets/: rand_imgs_100_dpi.eps  rand_imgs_300.eps
paper/extended_version/: jsai_no_headings.org  local-bib.bib  rea_jsai_submission.org  references.bib
paper/extended_version/assets/old_assets/: t2.el
preprocessing/: __init__.py  extract_masters_images.py  extract_suumo.py  preparing_for_analysis.py  process_jsonlines.py
research/: notes.org
