[tool.poetry]
name = "real_estate_analysis"
version = "0.1.0"
description = ""
authors = ["Jiyan Jonas Schneider <jiyan.schneider@keio.jp>"]

[tool.poetry.dependencies]
python = "^3.8"
fastai = "^2.5.3"
pandas = "^1.3.5"

[tool.poetry.dev-dependencies]
ipykernel = "^6.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
