[tool.poetry]
name = "real_estate_analysis"
version = "0.1.0"
description = ""
authors = ["Jiyan Jonas Schneider <jiyan.schneider@keio.jp>"]

[tool.poetry.dependencies]
python = "^3.8"
fastai = "^2.5.3"
pandas = "^1.3.5"
statsmodels = "^0.13.1"
scikit-learn = "^1.0.2"
numexpr = "^2.8.1"
SciencePlots = "^1.0.9"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
ipykernel = "^6.6.0"
ipython = "^7.30.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
